@@ -477,6 +477,7 @@ Customizing the grid
     labelMargin: number
     markings: array of markings or (fn: axes -> array of markings)
     borderWidth: number
+    borderColor: color or null
     clickable: boolean
     hoverable: boolean
     autoHighlight: boolean
@@ -495,7 +496,8 @@ of the page with CSS.
 between tick labels and the grid. Note that you can style the tick
 labels with CSS, e.g. to change the color. They have class "tickLabel".
 "borderWidth" is the width of the border around the plot. Set it to 0
-to disable the border.
+to disable the border. You can also set "borderColor" if you want the
+border to have a different color than the grid lines.
 
 "markings" is used to draw simple lines and rectangular areas in the
 background of the plot. You can either specify an array of ranges on
